@@ -1,3 +1,4 @@
+  - removed unused functionality to load a subset of lines from a file (messju)
   - fix is_secure() should only check if a file is_readable, not if
     the directory where it is in is readable (sagi, messju)
   - fix problem displaying debug console when $default_resource_type
